// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AppointmentHeader component should render info text when there is no appointment 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      No appointment
    </h2>
  </div>
</DocumentFragment>
`;

exports[`AppointmentHeader component should render the date when the appointment has one 1`] = `
<DocumentFragment>
  <div
    class="mobile-working-title-banner"
  >
    <h2
      class="lbh-heading-h2"
    >
      Friday 19 March
      <br />
      12:00 – 18:00
    </h2>
  </div>
</DocumentFragment>
`;
